python-fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pythonapp-fault-injection
spec:
  hosts:
    - "*"
  gateways:
  - pythonapp-gateway
  http:
  - match:
    - uri:
        exact: "/"
    rewrite:
      uri: "/v2"
    fault:
      delay:
        percentage:
          value: 100.0
        fixedDelay: 5s
    route:
    - destination:
        host: pythonapp
        subset: version2
        port:
          number: 5000
